--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Re-Deployed App to AKS using GHA.</h1>
+    <h1 class="display-4">Re-Deployed App to AKS using GHA. New change test.</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
